--- a/RetoCafeteriaNET/RetoCafeteriaNET/RetoCafeteriaNET.vbproj
+++ b/RetoCafeteriaNET/RetoCafeteriaNET/RetoCafeteriaNET.vbproj
@@ -73,6 +73,10 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Categoria.vb" />
+    <Compile Include="Comanda.vb" />
+    <Compile Include="Empleado.vb" />
+    <Compile Include="Fichaje.vb" />
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +90,7 @@
     <Compile Include="FormTPV.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="LineaComanda.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -101,6 +106,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Producto.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="FormTPV.resx">
