--- a/RetoCafeteriaNET/RetoCafeteriaNET/RetoCafeteriaNET.vbproj
+++ b/RetoCafeteriaNET/RetoCafeteriaNET/RetoCafeteriaNET.vbproj
@@ -96,10 +96,17 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Entidades\LineaComanda.vb" />
+    <Compile Include="FORMS\MenuEmpleados.Designer.vb">
+      <DependentUpon>MenuEmpleados.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FORMS\MenuEmpleados.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
       <DependentUpon>Application.myapp</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="My Project\Resources.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -116,6 +123,9 @@
   <ItemGroup>
     <EmbeddedResource Include="FORMS\FormTPV.resx">
       <DependentUpon>FormTPV.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FORMS\MenuEmpleados.resx">
+      <DependentUpon>MenuEmpleados.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
