--- a/RetoCafeteriaNET/RetoCafeteriaNET/RetoCafeteriaNET.vbproj
+++ b/RetoCafeteriaNET/RetoCafeteriaNET/RetoCafeteriaNET.vbproj
@@ -146,5 +146,8 @@
     </None>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Imagenes\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
